# offboard_fsm

./: .gitignore  CMakeLists.txt  package.xml
3rd_msg/quadrotor_msgs/: CMakeLists.txt
3rd_msg/quadrotor_msgs/msg/: AuxCommand.msg
cfg/: ctrl_param_fpv.yaml  mission_cfg.yaml
include/offboard_sample/: controller.h  darc_height_controller.h  input.h  offboard_fsm.h  traj_fsm.h  traj_fsm_att.h  transform_h  utils.h  vel_fsm_test.h
launch/: offb_att.launch  offb_node copy.launch  offb_node.launch  offb_node_py.launch  offb_node_telem.launch  offb_node（复件）.launch  offbvel_node_sim.launch  offbvel_node_test.launch
media/materials/scripts/: landing_pad_aruco_f.material
scripts/: fly_test_serial.py  key_board.py  key_board2.py  key_board3.py  keys2.py  offboard_fsm copy.py  offboard_fsm.py  serial_send.py  traj_pub.py  traj_pub_perch.py  traj_pub_perch2.py  traj_pub_perch_minijerk.py
sh/: enable_py.sh  mavros_rate_enhance.sh  takeoff.sh
src/: CMakeLists.txt  PX4CtrlParam.cpp  controller.cpp  darc_height_controller.cpp  input.cpp  offb_node.cpp  offboard_att.cpp  offboard_fsm.cpp  offbvel_node.cpp  offbvel_node_sim.cpp  package.xml  traj_fsm.cpp  traj_fsm_att.cpp  vel_fsm.cpp  vel_fsm_test.cpp
